--- a/src/assets/styles/type/code.css
+++ b/src/assets/styles/type/code.css
@@ -20,7 +20,7 @@ kbd {
 		svg {
 			width: 1rem;
 			height: 1rem;
-			fill: var(--bright_white);
+			fill: light-dark(var(--black), var(--bright_white));
 		}
 	}
 
